# detect-unquantified-tyvars

./: .gitignore  README.md  cabal.project
plugin/: DetectUnquantifiedTyVars.hs  plugin.cabal
test/: Test.hs  test.cabal
